# ai2048

./: ai2048.cabal
app/: Main.hs
lib/: AI2048.hs  AIWorld.hs  Brain.hs  Game2048.hs
test/: AISpec.hs  AIWorldSpec.hs  BrainSpec.hs  GameSpec.hs  Spec.hs
